Fixed spacing for words with roles.

--- a/Nestle1904/lowfat/treedown.css
+++ b/Nestle1904/lowfat/treedown.css
@@ -203,9 +203,3 @@ wg[class=minor][role]::before {
   margin-left: -1em;
   margin-right: 1em;
 }
-
-w[role]::before {
-  /* Move the role for constituent clauses outside of the clause border */
-  margin-left: -2em;
-  margin-right: 1em;
-}
